--- a/src/Reusable Components/directorytree.module.css
+++ b/src/Reusable Components/directorytree.module.css
@@ -2,16 +2,25 @@
   display: flex;
 }
 
-.icon-space {
-  margin: 0 40px;
-}
-
 .folderContainer {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
 }
 
 .fileContainer {
-  width: 150px;
-  height: 150px;
+  max-width: 150px;
+  max-height: 150px;
+}
+
+.gridContainer {
+  display: grid;
+  gap: 2px;
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  row-gap: 40px;
+}
+
+.gridItem {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
