feat: Fixed breadcrumbs and improved icon spacing. Added file and folder upload functionality

--- a/src/Reusable Components/file_folder.module.css
+++ b/src/Reusable Components/file_folder.module.css
@@ -12,8 +12,10 @@
 
 .text {
   font-weight: 600;
+  max-width: 100%;
+
+  overflow: hidden;
   text-overflow: ellipsis;
-  max-height: 20px;
 }
 
 .modalContainer {
