feat: Added delete button and functionality

--- a/src/Reusable Components/directorytree.module.css
+++ b/src/Reusable Components/directorytree.module.css
@@ -24,3 +24,12 @@
   flex-direction: column;
   text-align: center;
 }
+
+.checkbox-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.checkbox {
+}
