--- a/src/Reusable Components/file_folder.module.css
+++ b/src/Reusable Components/file_folder.module.css
@@ -32,6 +32,7 @@
   display: flex;
   flex-direction: column;
   text-align: center;
+  overflow-y: scroll;
 }
 
 .buttonContainer {
@@ -58,4 +59,8 @@
 
 .previewContainer {
   height: 800px;
+}
+
+.downloadContainer {
+  margin-top: 20px;
 }
